2005-01-07  Mike Sutton  <mws116@usa.com>

	* term/gd.trm: New terminal option {rounded|butt} controls line caps.

	* src/color.c (draw_color_smooth_box): In splot in view map mode, have
	the colorbox extend the full height of the y axis by default. Placement
	in 3D plots is not affected. This was the old (pre-4.0) behaviour.

2005-01-07  Daniel Sebald  <daniel.sebald@ieee.org>

	* term/gd.trm: Addtional processing of animated gifs to bring
	output file into compliance with the Gif89a standard.

	* demo/animate2.dem demo/rotate.gnu: New demo of gif animation,
	showing transparency.  Revised rotation code for both animate
	and animate2 demos.

2006-01-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/term.c (term_end_multiplot): Free title string and clear
	multiplot title.

2005-01-07  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/gplt_x11.c (record):  Incorrect nesting of parentheses.

2006-01-02  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_options): Change default animation mode to 
	"nooptimize".  Disable optimization if the background is transparent,
	as this combination is not handled well by most viewing programs.

2006-01-02  Dennis Linse <djlinse37@yahoo.com>

	* term/x11.trm: Remove redundant #include <sys/select.h>

2005-12-30  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_options): Initialize and report animate {nooptimize}
	flag in terminal options string.

2005-12-29  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm term/vgagl.trm:  Cleanup (#undef) definition of Y(coord)
	before leaving driver code.

	* term/pdf.trm:  Correct signedness problem in call to PDF_open_image().

	* term/svg.trm: Increase the internal resolution of terminal coordinates
	by adding a scale factor SVG_SCALE. This fixes the "wavy line" bug seen
	in svg plots.

2005-12-29  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/gd.trm: New routine image_do_crop(), extracted from png_text().